--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>Hello world!</h1>
+<head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/flot/4.2.3/jquery.flot.js"></script>
+</head>
+<body>
+  <div id="placeholder"></div>
+  <div id="placeholder" style="width:600px;height:300px"></div>
+</body>
