--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<h1>This is page 1</h1>
-<a href="page2.html">Page 2</a>
+<h1>Welcome to Docnetmd</h1>
+<h2>A place to connect you with a doctor you can trust</h2>
+<h2>To begin, please enter your name</h2>
+<form>
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" value="John"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" value="Doe"><br><br>
+  <a href="page2.html">
+  <input type="submit" value="Submit">
+  </a>
+</form> 
