--- a/page2.html
+++ b/page2.html
@@ -1,1 +1,5 @@
-<h1>this is for doctor</h1>
+<link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
+<script defer src="https://pyscript.net/latest/pyscript.js"></script>
+<py-script>
+print("HI")  
+</py-script>
