--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     </script>
   </head>
   <body>
+    <h1>Testing</h1>
+    <table>
+      <row><column>has</column></row>
     <div id="curve_chart" style="width: 900px; height: 500px"></div>
   </body>
 </html>
