--- a/index.html
+++ b/index.html
@@ -24,6 +24,25 @@
 
         chart.draw(data, options);
       }
+     function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['Time', 'NTU',],
+          ['1:00PM',  0.2,],
+          ['2:00PM',  0.3,],
+          ['3:00PM',  0.3,],
+          ['4:00PM',  0.4,]
+        ]);
+
+        var options = {
+          title: 'Turbidity VS Time',
+          curveType: 'function',
+          legend: { position: 'bottom' }
+        };
+
+        var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+
+        chart.draw(data, options);
+      }
     </script>
   </head>
   <body>
