--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       google.charts.load('current', {'packages':['corechart']});
       google.charts.setOnLoadCallback(drawChart);
 
-      function drawChart() {
+      function drawChart1() {
         var data = google.visualization.arrayToDataTable([
           ['Time', 'PH',],
           ['1:00PM',  7.0,],
@@ -24,7 +24,7 @@
 
         chart.draw(data, options);
       }
-     function drawChart() {
+     function drawChart2() {
         var data = google.visualization.arrayToDataTable([
           ['Time', 'NTU',],
           ['1:00PM',  0.2,],
@@ -43,7 +43,7 @@
 
         chart.draw(data, options);
       }
-     function drawChart() {
+     function drawChart3() {
         var data = google.visualization.arrayToDataTable([
           ['Time', 'PPM',],
           ['1:00PM',  100,],
