--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         chart.draw(data, options);
       }
-     function drawChart2() {
+    <!-- function drawChart2() {
         var data = google.visualization.arrayToDataTable([
           ['Time', 'NTU',],
           ['1:00PM',  0.2,],
@@ -61,13 +61,13 @@
         var chart = new google.visualization.LineChart(document.getElementById('curve_chart3'));
 
         chart.draw(data, options);
-      }
+      } -->
     </script>
   </head>
   <body>
     <h1>Water Quality Testing</h1>
     <div id="curve_chart1" style="width: 900px; height: 500px"></div>
-    <div id="curve_chart2" style="width: 900px; height: 500px"></div>
-    <div id="curve_chart2" style="width: 900px; height: 500px"></div>
+    <!--<div id="curve_chart2" style="width: 900px; height: 500px"></div>
+    <div id="curve_chart2" style="width: 900px; height: 500px"></div>-->
   </body>
 </html>
