--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         chart.draw(data, options);
       }
-    <!-- function drawChart2() {
+    /*function drawChart2() {
         var data = google.visualization.arrayToDataTable([
           ['Time', 'NTU',],
           ['1:00PM',  0.2,],
@@ -61,7 +61,7 @@
         var chart = new google.visualization.LineChart(document.getElementById('curve_chart3'));
 
         chart.draw(data, options);
-      } -->
+      } */
     </script>
   </head>
   <body>
