--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           legend: { position: 'bottom' }
         };
 
-        var chart = new google.visualization.LineChart(document.getElementById('curve_chart1'));
+        var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
 
         chart.draw(data, options);
       }
@@ -66,7 +66,7 @@
   </head>
   <body>
     <h1>Water Quality Testing</h1>
-    <div id="curve_chart1" style="width: 900px; height: 500px"></div>
+    <div id="curve_chart" style="width: 900px; height: 500px"></div>
     <!--<div id="curve_chart2" style="width: 900px; height: 500px"></div>
     <div id="curve_chart2" style="width: 900px; height: 500px"></div>-->
   </body>
