--- a/index.html
+++ b/index.html
@@ -1,73 +1,67 @@
-  <html>
-  <head>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
-      google.charts.load('current', {'packages':['corechart']});
-      google.charts.setOnLoadCallback(drawChart);
+<html>
+    <head>
+      <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+      <script type="text/javascript">
+        google.charts.load('current', {'packages':['corechart']});
+        google.charts.setOnLoadCallback(drawChart);
+  
+        function drawChart() {
+          var data1 = google.visualization.arrayToDataTable([
+            ['Time', 'PH'],
+            ['1:00PM',  7.0],
+            ['2:00PM',  7.1],
+            ['3:00PM',  7.2],
+            ['4:00PM',  6.9]
+          ]);
 
-      function drawChart1() {
-        var data = google.visualization.arrayToDataTable([
-          ['Time', 'PH',],
-          ['1:00PM',  7.0,],
-          ['2:00PM',  7.1,],
-          ['3:00PM',  7.2,],
-          ['4:00PM',  6.9,]
-        ]);
 
-        var options = {
-          title: 'PH VS Time',
-          curveType: 'function',
-          legend: { position: 'bottom' }
-        };
+          var data2 = google.visualization.arrayToDataTable([
+            ['Time', 'NTU'],
+            ['1:00PM',  0.2],
+            ['2:00PM',  0.3],
+            ['3:00PM',  0.3],
+            ['4:00PM',  0.4]
+          ]);
 
-        var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+          var data3 = google.visualization.arrayToDataTable([
+            ['Time', 'PPM',],
+            ['1:00PM',  100,],
+            ['2:00PM',  150,],
+            ['3:00PM',  135,],
+            ['4:00PM',  121,]
+          ]);
 
-        chart.draw(data, options);
-      }
-    /*function drawChart2() {
-        var data = google.visualization.arrayToDataTable([
-          ['Time', 'NTU',],
-          ['1:00PM',  0.2,],
-          ['2:00PM',  0.3,],
-          ['3:00PM',  0.3,],
-          ['4:00PM',  0.4,]
-        ]);
+          var options1 = {
+            title: 'PH VS Time',
+            curveType: 'function',
+            legend: { position: 'bottom' }
+          };
+  
+          var options2 = {
+            title: 'Turbidity VS Time',
+            curveType: 'function',
+            legend: { position: 'bottom' }
+          };
 
-        var options = {
-          title: 'Turbidity VS Time',
-          curveType: 'function',
-          legend: { position: 'bottom' }
-        };
+          var options3 = {
+            title: 'TDS VS Time',
+            curveType: 'function',
+            legend: { position: 'bottom' }
+          };
 
-        var chart = new google.visualization.LineChart(document.getElementById('curve_chart2'));
-
-        chart.draw(data, options);
-      }
-     function drawChart3() {
-        var data = google.visualization.arrayToDataTable([
-          ['Time', 'PPM',],
-          ['1:00PM',  100,],
-          ['2:00PM',  150,],
-          ['3:00PM',  135,],
-          ['4:00PM',  121,]
-        ]);
-
-        var options = {
-          title: 'TDS VS Time',
-          curveType: 'function',
-          legend: { position: 'bottom' }
-        };
-
-        var chart = new google.visualization.LineChart(document.getElementById('curve_chart3'));
-
-        chart.draw(data, options);
-      } */
-    </script>
-  </head>
-  <body>
-    <h1>Water Quality Testing</h1>
-    <div id="curve_chart" style="width: 900px; height: 500px"></div>
-    <!--<div id="curve_chart2" style="width: 900px; height: 500px"></div>
-    <div id="curve_chart2" style="width: 900px; height: 500px"></div>-->
-  </body>
-</html>
+          var chart1 = new google.visualization.LineChart(document.getElementById('curve_chart1'));
+          var chart2 = new google.visualization.LineChart(document.getElementById('curve_chart2'));
+          var chart3 = new google.visualization.LineChart(document.getElementById('curve_chart3'));
+          chart1.draw(data1, options1);
+          chart2.draw(data2, options2);
+          chart3.draw(data3, options3);
+        }
+      </script>
+    </head>
+    <body>
+      <h1>Water Quality Testing</h1>
+      <div id="curve_chart1" style="width: 900px; height: 500px"></div>
+      <div id="curve_chart2" style="width: 900px; height: 500px"></div>
+      <div id="curve_chart3" style="width: 900px; height: 500px"></div>
+    </body>
+  </html>
